# VoxCtr

./: .gitignore  README.md  ai.whisperwayland.Dictation.yaml  crash_report.txt  docs-update.md  install.sh  requirements.txt  voxctl.sh  whisper-wayland.sh
.agent/: mcp_config.json
docs/: mcp_documentation.md  overlays.md  windows-port-plan.md
rust-poc/atspi-context/: Cargo.toml  README.md
rust-poc/atspi-context/src/: context.rs  main.rs
scripts/: build_appimage.sh  build_for_deploy.sh  bundle_for_release.sh  install-deps.sh  setup-permissions.sh  test_hermes_voice.py  test_mcp_lifecycle.py  test_mcp_voice.py
src/: audio_recorder.py  config.py  config_validator.py  dbus_service.py  inference_engine.py  input_listener.py  main.py  mcp_server.py  portal_injector.py  text_injector.py  tts_engine.py  tts_responder.py
src/backends/: faster_whisper_backend.py  moonshine_backend.py  protocol.py  selector.py  whisper_cpp_backend.py
src/gui/: keybind_utils.py  settings_window.py  waveform_overlay.py
src/gui/overlays/: tts_response.py
src/routing/: loader.py  models.py
tests/: test_audio_recorder.py  test_backend_protocol.py  test_config_validator.py  test_key_capture_widget.py  test_mcp_server.py  test_moonshine_backend.py  test_tts_engine.py  test_tts_responder.py
